# agentic-task-manager

./: .env.example  .gitignore  DEMONSTRATION.md  Dockerfile  MVP-PLAN.md  REPOSITORY-SETTINGS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: AGENTS_MEMORY.md  CODEOWNERS  PR_TEMPLATE.md  mcp-allowlist.yml  risk-classification.yml
.github/agents/: backend.agent.md  db.agent.md  frontend.agent.md
.github/workflows/: agent-audit.yml  agent-backend.yml  agent-ci-evaluate.yml  agent-db.yml  agent-execute.yml  agent-frontend.yml  agent-integrator.yml  agent-merger.yml  agent-plan.yml  agentic-router.yml  agentic-workflow-processor.yml  anti-pattern-demo.yml  ci.yml  conflict-detection.yml  drift-detection.yml  failure-analysis.yml  governance-review.yml  memory-cleanup.yml  (+7 more)
Instructions/: 01-repository-setup.md  02-agent-workflow-guide.md  03-end-to-end-scenarios.md  04-risk-classification.md  05-mcp-server-usage.md  06-memory-management.md  07-local-development.md  08-troubleshooting.md  09-add-refresh-button.md  10-integrating-coding-llm-agents.md  README.md
agent-intents/: 23-dark-mode.md  example-intent.md
backend/: app.py  models.py
mcp-servers/: agent-memory-server.py  validate-schema-server.py
okf/: index.md  log.md  user-guide.md
plans/: plan-1.md  plan-13.md  plan-15.md  plan-17.md  plan-19.md  plan-23.md  plan-24.md  plan-26.md  plan-31.md  plan-4.md  plan-7.md
scripts/: agent-wrapper.sh  count_memory_entries.py  create_impl_pr.py  drift-check.sh  fetch_failures.py  generate-plan.py  parse_frontmatter.py  rollback.sh
(+51 files in other folders)
